--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: Capstone
+name: capstone_V2
 description: Lucy Lyon Fall '22 CSCI Capstone.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
